# Talot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Talot.slnx  premake5.lua
SandBox/: SandBox.vcxproj
SandBox/src/: application.cpp  application.h  command.h  main.cpp  sandbox.cpp  sandbox.h
Talot/: Talot.vcxproj
Talot/src/: talot.cpp  talot.h  transform.cpp  transform.h
